Made style changes

--- a/createwallet.html
+++ b/createwallet.html
@@ -62,9 +62,9 @@
         <p id="logo"><a href="./" accesskey="h">Vault0x</a></p>
         <nav id="skip">
           <ul>
-            <li><a href="#nav" accesskey="n">Skip to navigation (n)</a></li>
-            <li><a href="#content" accesskey="c">Skip to content (c)</a></li>
-            <li><a href="#footer" accesskey="f">Skip to footer (f)</a></li>
+            <li><a href="#nav" accesskey="n">Skip to Navigation (n)</a></li>
+            <li><a href="#content" accesskey="c">Skip to Content (c)</a></li>
+            <li><a href="#footer" accesskey="f">Skip to Footer (f)</a></li>
           </ul>
         </nav>
          <nav id="nav">
