renamed javascript folder to js to avoid ubuntu bug

--- a/blank.html
+++ b/blank.html
@@ -108,9 +108,9 @@
 				</ul>
 			</footer>
 		</div>
-		<script src="javascript/jquery.js"></script>
-		<script src="javascript/scripts.js"></script>
-		<script src="javascript/custom.js"></script>
-		<script src="javascript/mobile.js"></script>
+		<script src="js/jquery.js"></script>
+		<script src="js/scripts.js"></script>
+		<script src="js/custom.js"></script>
+		<script src="js/mobile.js"></script>
 	</body>
 </html>
