--- a/generateKey.html
+++ b/generateKey.html
@@ -150,19 +150,19 @@
       </footer>
     </div>
 
-    <script src="javascript/jquery.js"></script>
-    <script src="javascript/scripts.js"></script>
-    <script src="javascript/custom.js"></script>
-    <script src="javascript/mobile.js"></script>
+    <script src="js/jquery.js"></script>
+    <script src="js/scripts.js"></script>
+    <script src="js/custom.js"></script>
+    <script src="js/mobile.js"></script>
     <script
         src="https://code.jquery.com/jquery-2.2.4.min.js"
         integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
         crossorigin="anonymous"></script>
-    <script src="javascript/bitcore-lib/bitcore-lib.min.js"></script>
-    <script src="javascript/bitcore-mnemonic/bitcore-mnemonic.min.js"></script>
-    <script src="javascript/bitcore-explorers/bitcore-explorers.min.js"></script>
+    <script src="js/bitcore-lib/bitcore-lib.min.js"></script>
+    <script src="js/bitcore-mnemonic/bitcore-mnemonic.min.js"></script>
+    <script src="js/bitcore-explorers/bitcore-explorers.min.js"></script>
    
-    <script src="javascript/app.js"></script>
+    <script src="js/app.js"></script>
      <script type="text/javascript">
 
     function generateWIFKey()  {
