--- a/createwallet.html
+++ b/createwallet.html
@@ -154,19 +154,19 @@
       </footer>
     </div>
 
-    <script src="javascript/jquery.js"></script>
-    <script src="javascript/scripts.js"></script>
-    <script src="javascript/custom.js"></script>
-    <script src="javascript/mobile.js"></script>
+    <script src="js/jquery.js"></script>
+    <script src="js/scripts.js"></script>
+    <script src="js/custom.js"></script>
+    <script src="js/mobile.js"></script>
     <script src="https://code.jquery.com/jquery-2.2.4.min.js"
             integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
             crossorigin="anonymous"></script>
-    <script src="javascript/bitcore-lib/bitcore-lib.min.js"></script>
-    <script src="javascript/bitcore-mnemonic/bitcore-mnemonic.min.js"></script>
-    <script src="javascript/bitcore-explorers/bitcore-explorers.min.js"></script>
+    <script src="js/bitcore-lib/bitcore-lib.min.js"></script>
+    <script src="js/bitcore-mnemonic/bitcore-mnemonic.min.js"></script>
+    <script src="js/bitcore-explorers/bitcore-explorers.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.qrcode/1.0/jquery.qrcode.min.js"></script>
-    <script src="javascript/app.js"></script>
-    <script src="javascript/wallet.js"></script>
+    <script src="js/app.js"></script>
+    <script src="js/wallet.js"></script>
     <script type="text/javascript">
       function myFunction() {
 
